Remove .mvn/jvm.config