@@ -698,6 +698,7 @@ under the License.
                 <argLine>
                   --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                   --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                  --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
                   --add-opens java.base/java.nio=ALL-UNNAMED
                   --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                 </argLine>
